--- a/src/.i3/i3status.conf
+++ b/src/.i3/i3status.conf
@@ -17,7 +17,9 @@ order += "disk /"
 #order += "run_watch VPN"
 order += "wireless _first_"
 #order += "ethernet _first_"
-#order += "battery 0"
+{{#if laptop}}
+order += "battery 0"
+{{/if}}
 #order += "load"
 order += "tztime local"
 
