--- a/src/.i3/i3status.conf
+++ b/src/.i3/i3status.conf
@@ -15,7 +15,9 @@ general {
 order += "disk /"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
+{{#if_not work}}
 order += "wireless _first_"
+{{/if_not}}
 #order += "ethernet _first_"
 {{#if laptop}}
 order += "battery 0"
