--- a/src/.i3/config
+++ b/src/.i3/config
@@ -174,6 +174,7 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+{{#if work}}
 # Workspaces and their screens
 workspace $ws1 output $right_screen
 workspace $ws2 output $left_screen
@@ -185,6 +186,7 @@ workspace $ws7 output $right_screen
 workspace $ws8 output $left_screen
 workspace $ws9 output $right_screen
 workspace $ws10 output $left_screen
+{{/if}}
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
