--- a/src/.xbindkeysrc
+++ b/src/.xbindkeysrc
@@ -22,11 +22,11 @@ F6
 F7
 
 # volume mute/decrease/increase
-"amixer -D pulse set -c 1 Master 1+ toggle"
+"pactl set-sink-mute 0 toggle"
 F8
-"amixer set -c 1 Master 5%-"
+"pactl set-sink-volume 0 -5%"
 F9
-"amixer set -c 1 Master 5%+"
+"pactl set-sink-volume 0 +5%"
 F10
 
 # page up/down, home, end
@@ -48,15 +48,15 @@ Alt + Right
 {{else if desktop}}
 
 # Increase volume
-"amixer -q set Master 2dB+ unmute"
+"pactl set-sink-volume 0 +5%"
     XF86AudioRaiseVolume
 
 # Decrease volume
-"amixer -q set Master 2dB- unmute"
+"pactl set-sink-volume 0 -5%"
     XF86AudioLowerVolume
 
 # Mute and unmute volume
-"amixer -D pulse set Master 1+ toggle"
+"pactl set-sink-mute 0 toggle"
     XF86AudioMute
 
 {{/if}}
