Fixing the colours

--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -1,8 +1,9 @@
 # Status bar colours
-set-option -g status-bg colour235
-set-option -g status-fg white
-set-option -g window-status-current-bg colour25
-set-option -g window-status-current-fg black
+set -g status-bg colour235
+set -g status-fg white
+set-window-option -g window-status-current-style bright
+set-window-option -g window-status-current-style fg=black
+set-window-option -g window-status-current-style bg=colour25
 set -g status-justify centre
 
 # Vi mode
