--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -1,9 +1,7 @@
 # Status bar colours
 set -g status-bg colour235
 set -g status-fg white
-set-window-option -g window-status-current-style bright
-set-window-option -g window-status-current-style fg=black
-set-window-option -g window-status-current-style bg=colour25
+set-window-option -g window-status-current-style bg=colour25,fg=colour232
 set -g status-justify centre
 
 # Vi mode
