--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -4,5 +4,8 @@ set -g status-fg white
 set-window-option -g window-status-current-style bg=colour25,fg=colour232
 set -g status-justify centre
 
+# Escape isn't delayed anymore
+set -s escape-time 0
+
 # Vi mode
 setw -g mode-keys vi
