--- a/src/.i3/config
+++ b/src/.i3/config
@@ -179,20 +179,6 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-{{#if desktop}}
-# Workspaces and their screens
-workspace $ws1 output $right_screen
-workspace $ws2 output $left_screen
-workspace $ws3 output $right_screen
-workspace $ws4 output $left_screen
-workspace $ws5 output $right_screen
-workspace $ws6 output $left_screen
-workspace $ws7 output $right_screen
-workspace $ws8 output $left_screen
-workspace $ws9 output $right_screen
-workspace $ws10 output $left_screen
-{{/if}}
-
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -251,3 +237,23 @@ bindsym $mod+$jMod+l exec i3lock -c "$base02"
 
 exec --no-startup-id xsetroot -solid="$base02"
 exec --no-startup-id ~/.fehbg
+
+{{#if desktop}}
+for_window [title="Desktop — Plasma"] kill, floating enable, border none
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
+for_window [class="yakuake"] floating enable
+for_window [class="systemsettings"] fullscreen enable
+for_window [class="plasmashell"] floating enable
+for_window [class="Plasma"] floating enable; border none
+for_window [title="plasma-desktop"] floating enable; border none
+#for_window [title="win7"] floating enable; border none
+for_window [class="krunner"] floating enable; border none
+for_window [class="Kmix"] floating enable; border none
+for_window [class="Klipper"] floating enable; border none
+for_window [class="Plasmoidviewer"] floating enable; border none
+#for_window [class="(?i)*nextcloud.*"] floating disable
+for_window [class="plasmashell" window_type="notification"] border none; move postiion 1450px 20px
+#for_window [class="plasmashell" window_type="notification"] border none; move right 700px; move down 450px
+for_window [title="Desktop @ QRect"] kill; floating enable; border none
+{{/if}}
