Updates the i3 config to work with sway

--- a/src/.i3/config
+++ b/src/.i3/config
@@ -79,7 +79,8 @@ set $ws10 "10 &#xf001;"
 {{/if}}
 
 # Window border will be pixel with no title bar
-new_window pixel
+default_border pixel
+hide_edge_borders smart
 
 # Scratchpad
 bindsym $mod+Shift+minus move scratchpad
