--- a/src/.config/waybar/config.jsonc
+++ b/src/.config/waybar/config.jsonc
@@ -35,7 +35,7 @@
     "clock": {
         "timezone": "Europe/London",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format": "{:%H:%M}",
+        "format": "{:%Y-%m-%d %H:%M}",
         "format-alt": "{:%Y-%m-%d}"
     },
 
