--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -45,6 +45,25 @@ input type:keyboard {
 {{#if desktop}}
 output $left_screen pos 0 0
 output $right_screen pos 1920 0
+{{else}}
+# Laptop + external monitor setup
+output DP-1 pos 0 0
+output eDP-1 pos 1920 0
+
+# Workspace assignments
+# Even workspaces (2,4,6,8,10) on external monitor
+workspace $ws2 output DP-1
+workspace $ws4 output DP-1
+workspace $ws6 output DP-1
+workspace $ws8 output DP-1
+workspace $ws10 output DP-1
+
+# Odd workspaces (1,3,5,7,9) on laptop screen
+workspace $ws1 output eDP-1
+workspace $ws3 output eDP-1
+workspace $ws5 output eDP-1
+workspace $ws7 output eDP-1
+workspace $ws9 output eDP-1
 {{/if}}
 
 # Idle configuration
