--- a/src/.config/foot/foot.ini
+++ b/src/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 [main]
-font=monospace:size=11
-dpi-aware=yes
+font=monospace:size=13
+dpi-aware=no
 
 [colors]
 # Vibrant pastel Molokai-inspired color scheme
