--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -41,17 +41,14 @@ input type:keyboard {
 }
 {{/unless}}
 
-output $left_screen pos 0 0
-output $right_screen pos 19200 0
-
 # External monitor setup
 # Workspace assignments - odd workspaces on any external monitor, even on laptop
 # Using * as fallback will match any connected output except those explicitly assigned
-workspace $ws1 output *
-workspace $ws3 output *
-workspace $ws5 output *
-workspace $ws7 output *
-workspace $ws9 output *
+workspace $ws1 output DP-1 DP-2 DP-3 HDMI-A-1 HDMI-A-2
+workspace $ws3 output DP-1 DP-2 DP-3 HDMI-A-1 HDMI-A-2
+workspace $ws5 output DP-1 DP-2 DP-3 HDMI-A-1 HDMI-A-2
+workspace $ws7 output DP-1 DP-2 DP-3 HDMI-A-1 HDMI-A-2
+workspace $ws9 output DP-1 DP-2 DP-3 HDMI-A-1 HDMI-A-2
 
 workspace $ws2 output eDP-1
 workspace $ws4 output eDP-1
