--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -92,3 +92,5 @@ bindsym $mod+i exec cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 # Screenshots
 bindsym $mod+p exec grim ~/Downloads/screenshot-$(date +%Y%m%d-%H%M%S).png
 bindsym Shift+$mod+p exec grim -g "$(slurp)" ~/Downloads/screenshot-$(date +%Y%m%d-%H%M%S).png
+bindsym Print exec grim ~/Downloads/screenshot-$(date +%Y%m%d-%H%M%S).png
+bindsym Shift+Print exec grim -g "$(slurp)" ~/Downloads/screenshot-$(date +%Y%m%d-%H%M%S).png
