--- a/src/.gitconfig
+++ b/src/.gitconfig
@@ -1,6 +1,13 @@
 [user]
-    name = logiclogue
-    email = jordanpaullord@hotmail.co.uk
+    name = Jordan Lord
+    email = me@jordanlord.co.uk
+    signingkey = 275F7C952170FDC0
+
+[commit]
+    gpgsign = true
+
+[tag]
+    gpgsign = true
 
 [color]
     ui = true
@@ -11,3 +18,6 @@
 
 [diff]
     tool = vimdiff
+
+[includeIf "gitdir:~/workspace/simium/"]
+    path = ~/.gitconfig-simium
